--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/DriversUC.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/DriversUC.xaml
@@ -25,14 +25,14 @@
         </Style>
     </UserControl.Resources>
     <Grid>
-        <Button x:Name="DriverInSrvcBtn" Content="In Service" HorizontalAlignment="Center" Height="50" Margin="0,60,0,0" VerticalAlignment="Top" Width="250" Background="#FF1572A1" FontFamily="Montserrat" FontWeight="Medium" Foreground="White" BorderBrush="#FF7AB3EF" RenderTransformOrigin="1,1" BorderThickness="2,2,2,2" FontSize="14">
+        <Button x:Name="DriverInSrvcBtn" Content="In Service" HorizontalAlignment="Center" Height="50" Margin="0,60,0,0" VerticalAlignment="Top" Width="250" Background="#FF1572A1" FontFamily="Montserrat" FontWeight="Medium" Foreground="White" BorderBrush="#FF7AB3EF" RenderTransformOrigin="1,1" BorderThickness="2,2,2,2" FontSize="14" Click="DriverInSrvcBtn_Click">
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="5"/>
                 </Style>
             </Button.Resources>
         </Button>
-        <Button x:Name="DriverAvBtn" Content="Available" HorizontalAlignment="Center" Height="50" VerticalAlignment="Top" Width="250" Background="#FF1572A1" FontFamily="Montserrat" FontWeight="Medium" Foreground="White" BorderBrush="#FF7AB3EF" RenderTransformOrigin="1,1" BorderThickness="2,2,2,2" Margin="0,140,0,0" FontSize="14">
+        <Button x:Name="DriverAvBtn" Content="Available" HorizontalAlignment="Center" Height="50" VerticalAlignment="Top" Width="250" Background="#FF1572A1" FontFamily="Montserrat" FontWeight="Medium" Foreground="White" BorderBrush="#FF7AB3EF" RenderTransformOrigin="1,1" BorderThickness="2,2,2,2" Margin="0,140,0,0" FontSize="14" Click="DriverAvBtn_Click">
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="5"/>
