--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/MainWindow.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/MainWindow.xaml
@@ -65,8 +65,8 @@
         </local:VehicleUC>
         <local:DriversUC x:Name="DriversUC" Grid.RowSpan="2" Margin="180,0,0,0" Grid.ColumnSpan="2" Visibility="Hidden"/>
         <local:AdminUC x:Name="AdminUC" Grid.RowSpan="2" Margin="180,0,0,0" Grid.ColumnSpan="2" Visibility="Hidden"/>
-        <local:DetailsUC x:Name="DetailsUC___Search" VerticalAlignment="Top" Grid.RowSpan="2" Height="434" RenderTransformOrigin="0.504,0.495" Margin="172,-34,10,0" Grid.ColumnSpan="2" HorizontalAlignment="Right" Visibility="Hidden"/>
-        <local:DetailsDataCus x:Name="DetailsDataGrid" Width="4000" Grid.RowSpan="2" HorizontalAlignment="Left" Margin="205,70,0,0" VerticalAlignment="Top" Height="4000" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.ColumnSpan="2" Loaded="DetailsDataGrid_Loaded" Visibility="Hidden"/>
+        <local:DetailsUC x:Name="DetailsUC" Margin="202,4,-2,3" Grid.RowSpan="2" Grid.ColumnSpan="2" Visibility="Hidden"/>
+
         <Grid HorizontalAlignment="Left" Height="73" Margin="0,0,0,3" Grid.Row="1" VerticalAlignment="Bottom" Width="209">
             <Rectangle Height="67" Stroke="#FF368CE7" Width="200" StrokeThickness="3" Fill="#FFEEF6FF" VerticalAlignment="Center" HorizontalAlignment="Left"/>
             <Label x:Name="EMPName" Content="J.A.K.Jayawardana" Margin="34,10,18,32" Foreground="#FF368CE7" FontWeight="SemiBold" FontFamily="Montserrat" FontSize="13"/>
