--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/EndRentDetail.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/EndRentDetail.xaml
@@ -97,7 +97,7 @@
                     CaretBrush="Gray"
                     BorderBrush="{x:Null}"
                     BorderThickness="0,0,0,1"
-                    Margin="8,0,8,0" Height="31" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center"
+                    Margin="8,3,8,5" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center"
                              />
 
 
@@ -150,7 +150,7 @@
                     Foreground="Black"
                     CaretBrush="Gray"
                     BorderBrush="{x:Null}"
-                    BorderThickness="0,0,0,1" Height="34" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Right" Width="308" Margin="0,0,8,0"
+                    BorderThickness="0,0,0,1" Height="24" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center" VerticalAlignment="Top" HorizontalAlignment="Center" Width="308" Margin="0,1,0,0"
                              />
 
 
