--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/EndHireDetail.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/EndHireDetail.xaml
@@ -11,18 +11,19 @@
             <Button x:Name="btnNext"
                              
                 BorderThickness="0"
-                Content="Next"
+                Content="Finish"
                 Foreground="Black"
                 FontSize="12"
                 FontFamily="MonteSerrat"
+                FontWeight="SemiBold"
                 Cursor="Hand"
-                Click="btnSubmit_Click" Margin="0,331,-7,0" Height="53" VerticalAlignment="Top" HorizontalAlignment="Right" Width="175">
+                Click="btnSubmit_Click" Margin="0,329,198,0" Height="53" VerticalAlignment="Top" HorizontalAlignment="Right" Width="175">
                 <Button.Style>
                     <Style TargetType="{x:Type Button}">
-                        <Setter Property="Background" Value="#71A4E1"/>
+                        <Setter Property="Background" Value="#FF7AB3EF"/>
                         <Style.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="#FF0351AF"/>
+                                <Setter Property="Background" Value="#FF1C6DD0"/>
                             </Trigger>
                         </Style.Triggers>
                     </Style>
@@ -46,8 +47,9 @@
                 Foreground="White"
                 FontSize="12"
                 FontFamily="MonteSerrat"
+                FontWeight="SemiBold"
                 Cursor="Hand"
-                Click="btnClear_Click" Margin="0,332,198,0" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Width="177">
+                Click="btnClear_Click" Margin="0,332,7,0" Height="50" VerticalAlignment="Top" HorizontalAlignment="Right" Width="177">
                 <Button.Style>
                     <Style TargetType="{x:Type Button}">
                         <Setter Property="Background" Value="Red"/>
@@ -88,7 +90,7 @@
                     Foreground="Black"
                     CaretBrush="Gray"
                     BorderBrush="{x:Null}"
-                    BorderThickness="0,0,0,1" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center" Height="37" VerticalAlignment="Center" HorizontalAlignment="Center" Width="308"
+                    BorderThickness="0,0,0,1" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center" Height="27" VerticalAlignment="Top" HorizontalAlignment="Left" Width="308" Margin="12,1,0,0"
                              />
 
 
@@ -113,7 +115,7 @@
                 Foreground="#FF1C6DD0"
                 FontWeight="Bold"
                 FontFamily="Montserrat"
-                Margin="0,183,95,0" Height="16" VerticalAlignment="Top" HorizontalAlignment="Right" Width="246"><Run Language="en-gb" Text="End Milage"/></TextBlock>
+                Margin="0,183,95,0" Height="16" VerticalAlignment="Top" HorizontalAlignment="Right" Width="246" Text="End Mileage"/>
             <Border CornerRadius="15"  
                 BorderBrush="Black" 
                 BorderThickness="2" 
@@ -126,7 +128,7 @@
                     Foreground="Black"
                     CaretBrush="Gray"
                     BorderBrush="{x:Null}"
-                    BorderThickness="0,0,0,1" Height="36" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center" Width="308"
+                    BorderThickness="0,0,0,1" Height="26" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center" VerticalAlignment="Top" HorizontalAlignment="Left" Width="308" Margin="12,1,0,0"
                              />
 
 
@@ -166,7 +168,7 @@
                     Foreground="Black"
                     CaretBrush="Gray"
                     BorderBrush="{x:Null}"
-                    BorderThickness="0,0,0,1" Height="34" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center" Width="308"
+                    BorderThickness="0,0,0,1" Height="24" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center" VerticalAlignment="Top" HorizontalAlignment="Left" Width="308" Margin="12,1,0,0"
                              />
 
 
