--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/VehicleInUseTable.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/VehicleInUseTable.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VehicleRentalSystem_V1._0"
         mc:Ignorable="d"
-        Title="VehicleInUseTable" Height="500" Width="800" Background="#FFEEF6FF">
+        Title="VehicleInUseTable" Height="500" Width="800" Background="#FFEEF6FF" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid HorizontalAlignment="Center" Margin="0,52,0,0" VerticalAlignment="Top">
             <Rectangle Height="44" Width="350" Fill="Turquoise" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-            <TextBlock HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" FontFamily="Montserrat" Text="Vehicle In Use" VerticalAlignment="Top" Width="194" Margin="97,10,0,0" FontWeight="SemiBold" FontSize="20"/>
+            <TextBlock HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" FontFamily="Montserrat" Text="Vehicles In Use" VerticalAlignment="Top" Width="194" Margin="97,10,0,0" FontWeight="SemiBold" FontSize="20"/>
 
         </Grid>
         <DataGrid x:Name="VehicleInUseTable1" Margin="86,150,82,138" d:ItemsSource="{d:SampleData ItemCount=5}" BorderBrush="#FF1C6DD0" BorderThickness="2,2,2,2"/>
