--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/DriversAvailableTable.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/DriversAvailableTable.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VehicleRentalSystem_V1._0"
         mc:Ignorable="d"
-        Title="DriversAvailableTable" Height="500" Width="800" Background="#FFEEF6FF">
+        Title="DriversAvailableTable" Height="500" Width="800" Background="#FFEEF6FF" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid HorizontalAlignment="Center" Margin="0,52,0,0" VerticalAlignment="Top">
             <Rectangle Height="44" Width="350" Fill="#FF368CE7" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-            <TextBlock HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" FontFamily="Montserrat" Text="Available Drivers" VerticalAlignment="Center" Width="220" Margin="83,0,0,0" FontWeight="SemiBold" FontSize="20" Foreground="White"/>
+            <TextBlock HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" FontFamily="Montserrat" Text="Available Drivers" VerticalAlignment="Center" Width="220" Margin="97,0,0,0" FontWeight="SemiBold" FontSize="20" Foreground="White"/>
 
         </Grid>
         <DataGrid x:Name="DriversAvailableTable1" Margin="84,150,84,124" d:ItemsSource="{d:SampleData ItemCount=5}" BorderBrush="#FF1C6DD0" BorderThickness="2,2,2,2"/>
