--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/RentPackagesFrom.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/RentPackagesFrom.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VehicleRentalSystem_V1._0"
         mc:Ignorable="d"
-        Title="Rent_packages" Height="724" Width="900">
+        Title="Rent_packages" Height="724" Width="900" WindowStartupLocation="CenterScreen">
     <Border Margin="92,60,91,0" BorderBrush="#FF1C6DD0" BorderThickness="3,3,3,3" CornerRadius="15,15,15,15" Background="#FFEEF6FF" Height="586" VerticalAlignment="Top">
         <Grid Height="536" VerticalAlignment="Center" HorizontalAlignment="Left" Width="654" Margin="27,0,0,0">
             <TextBlock Text="Manage Rent Pacakges Form"
@@ -14,7 +14,7 @@
                 Foreground="Black"
                 FontWeight="Bold"
                 FontFamily="Montserrat"
-                Margin="152,4,0,0" Height="27" VerticalAlignment="Top" HorizontalAlignment="Left" Width="326"/>
+                Margin="164,4,0,0" Height="27" VerticalAlignment="Top" HorizontalAlignment="Left" Width="326"/>
 
             <TextBlock Text="Package Name"
                 Foreground="#FF1C6DD0"
@@ -209,13 +209,13 @@
                 FontWeight="SemiBold"
                 Cursor="Hand"
                 Margin="160,481,330,0"
-                Click="btnUpdate_Click" RenderTransformOrigin="0.213,0.531" Height="47" VerticalAlignment="Top" Background="Turquoise" >
+                Click="btnUpdate_Click" RenderTransformOrigin="0.213,0.531" Height="47" VerticalAlignment="Top" >
                 <Button.Style>
                     <Style TargetType="{x:Type Button}">
-                        <Setter Property="Background" Value="#FF7AB3EF"/>
+                        <Setter Property="Background" Value="Turquoise"/>
                         <Style.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="#FF1C6DD0"/>
+                                <Setter Property="Background" Value="Gold"/>
                             </Trigger>
                         </Style.Triggers>
                     </Style>
