--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/ManageDriverForm.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/ManageDriverForm.xaml
@@ -20,7 +20,7 @@
                     FontFamily="Montserrat"
                     Margin="127,48,127,0" Height="23" VerticalAlignment="Top"/>
 
-                <TextBlock Text="Driver's Name"
+                <TextBlock Text="Driver Name"
                     Foreground="#FF1C6DD0"
                     FontSize="12"
                     FontWeight="Bold"
@@ -53,7 +53,7 @@
 
                 <!--Next-->
 
-                <TextBlock Text="Driver's NIC NO."
+                <TextBlock Text="Driver NIC No."
                     FontSize="12"
                     Foreground="#FF1C6DD0"
                     FontWeight="Bold"
@@ -86,7 +86,7 @@
 
                 <!--Next-->
 
-                <TextBlock Text="Driver License NO."
+                <TextBlock Text="Driver License No."
                     FontSize="12"
                     Foreground="#FF1C6DD0"
                     FontWeight="Bold"
@@ -119,7 +119,7 @@
 
                 <!--Next-->
 
-                <TextBlock Text="Driver's E-mail"
+                <TextBlock Text="Driver E-mail"
                     FontSize="12"
                     Foreground="#FF1C6DD0"
                     FontWeight="Bold"
@@ -149,7 +149,7 @@
 
 
                 </Border>
-                <TextBlock Text="Driver's Address"
+                <TextBlock Text="Driver Address"
                     FontSize="12"
                     Foreground="#FF1C6DD0"
                     FontWeight="Bold"
@@ -215,7 +215,7 @@
 
                 <!--Next-->
 
-                <TextBlock Text="Driver's State"
+                <TextBlock Text="Driver State"
                     FontSize="12"
                     Foreground="#FF1C6DD0"
                     FontWeight="Bold"
@@ -311,13 +311,13 @@
                         Cursor="Hand"
                         Grid.Column="1"
                         Margin="202,0,-56,0"
-                        Click="btnD_Update_Click" Height="47" Width="156" VerticalAlignment="Center" Grid.ColumnSpan="3" Background="Turquoise">
+                        Click="btnD_Update_Click" Height="47" Width="156" VerticalAlignment="Center" Grid.ColumnSpan="3" >
                         <Button.Style>
                             <Style TargetType="{x:Type Button}">
                                 <Setter Property="Background" Value="#FF40E0D0"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background" Value="#FF71A4E1"/>
+                                        <Setter Property="Background" Value="Gold"/>
                                     </Trigger>
                                 </Style.Triggers>
                             </Style>
@@ -343,7 +343,7 @@
                         FontFamily="Montserrat"
                         FontWeight="SemiBold"
                         Cursor="Hand"
-                        Click="btnD_Insert__Click" Height="47" VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="14,0,74,0" Background="#FF7AB3EF">
+                        Click="btnD_Insert__Click" Height="47" VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="14,0,74,0" >
                         <Button.Style>
                             <Style TargetType="{x:Type Button}">
                                 <Setter Property="Background" Value="#FF7AB3EF"/>
