--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/DetailsUC.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/DetailsUC.xaml
@@ -28,7 +28,7 @@
         <Border CornerRadius="15"  
                 BorderBrush="Black" 
                 BorderThickness="2" 
-                Margin="0,24,265,0" Background="White" Width="228" VerticalAlignment="Top" HorizontalAlignment="Right"
+                Margin="0,53,0,0" Background="White" Width="228" VerticalAlignment="Top" HorizontalAlignment="Center"
                     >
             <TextBox x:Name="searchTxt"
                     FontSize="15"
@@ -38,7 +38,7 @@
                     CaretBrush="Gray"
                     BorderBrush="{x:Null}"
                     BorderThickness="0,0,0,1"
-                    Margin="8,0,8,0" Height="31" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center" VerticalAlignment="Top"
+                    Margin="-48,0,64,0" Height="31" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center" VerticalAlignment="Center"
                              />
         </Border>
         <TextBlock
@@ -46,24 +46,24 @@
             Foreground="#FF1C6DD0"
             FontWeight="Bold"
             FontFamily="Montserrat"
-            Margin="0,10,444,0" VerticalAlignment="Top" HorizontalAlignment="Right"><Run Language="en-gb" Text="Search"/></TextBlock>
+            Margin="0,39,596,0" VerticalAlignment="Top" HorizontalAlignment="Right"><Run Language="en-gb" Text="Search"/></TextBlock>
         <TextBlock
             Foreground="#FF1C6DD0"
             FontWeight="Bold"
             FontFamily="Montserrat"
-            Margin="0,10,162,0" HorizontalAlignment="Right" Width="84" Height="20" VerticalAlignment="Top" RenderTransformOrigin="0.493,1.222"><Run Language="en-gb" Text="Service Type"/></TextBlock>
+            Margin="0,39,314,0" HorizontalAlignment="Right" Width="84" Height="20" VerticalAlignment="Top" RenderTransformOrigin="0.493,1.222"><Run Language="en-gb" Text="Service Type"/></TextBlock>
         <Border CornerRadius="15"  
             BorderBrush="Black" 
             BorderThickness="2" 
             HorizontalAlignment="Right" 
             Width="115"
-            Margin="0,24,139,0" Height="35" VerticalAlignment="Top" Background="White"
+            Margin="0,53,288,0" Height="35" VerticalAlignment="Top" Background="White"
                     >
             <ComboBox x:Name="CMBPST" 
                     
-                Margin="0,3,0,3" BorderBrush="#FF7AB3EF" BorderThickness="1,1,1,1" IsReadOnly="True"  HorizontalAlignment="Center" Width="95" VerticalContentAlignment="Center" Background="{x:Null}">
-                <ComboBoxItem Content="Hire" Tag="Hire" IsSelected="True"/>
-                <ComboBoxItem Content="Rent" Tag="Rent"/>
+                Margin="0,3,0,3" BorderBrush="#FF7AB3EF" BorderThickness="1,1,1,1" IsReadOnly="True"  HorizontalAlignment="Center" Width="95" VerticalContentAlignment="Center" Background="#FFEEF6FF">
+                <ComboBoxItem Content="Hire" Tag="Hire" IsSelected="True" BorderBrush="#FF7AB3EF" Background="#FFEEF6FF"/>
+                <ComboBoxItem Content="Rent" Tag="Rent" BorderBrush="#FF7AB3EF" Background="#FFEEF6FF"/>
 
             </ComboBox>
         </Border>
@@ -71,20 +71,20 @@
             Foreground="#FF1C6DD0"
             FontWeight="Bold"
             FontFamily="Montserrat"
-            Margin="0,10,36,0" HorizontalAlignment="Right" Width="84" Height="20" VerticalAlignment="Top" RenderTransformOrigin="0.493,1.222"><Run Language="en-gb" Text="Index"/><Run Text=" Type"/></TextBlock>
+            Margin="0,39,188,0" HorizontalAlignment="Right" Width="84" Height="20" VerticalAlignment="Top" RenderTransformOrigin="0.493,1.222"><Run Language="en-gb" Text="Index"/><Run Text=" Type"/></TextBlock>
         <Border CornerRadius="15"  
             BorderBrush="Black" 
             BorderThickness="2" 
             HorizontalAlignment="Right" 
-            Width="115"
-            Margin="0,24,16,0" Height="35" VerticalAlignment="Top" Background="White"
+            Width="135"
+            Margin="0,53,148,0" Height="35" VerticalAlignment="Top" Background="White"
                     >
             <ComboBox x:Name="CMBPIT" 
                     
-                Margin="0,3,0,3" BorderBrush="#FF7AB3EF" BorderThickness="1,1,1,1" IsReadOnly="True"  HorizontalAlignment="Center" Width="95" VerticalContentAlignment="Center" Background="{x:Null}">
-                <ComboBoxItem Content="Customer NIC" IsSelected="True" Tag="C_NIC"/>
-                <ComboBoxItem Content="Rider NIC" Tag="R_NIC"/>
-                <ComboBoxItem Content="Vehicle ChassisNO" Tag="V_CN"/>
+                Margin="0,3,0,3" BorderBrush="#FF7AB3EF" BorderThickness="1,1,1,1" IsReadOnly="True"  HorizontalAlignment="Center" Width="114" VerticalContentAlignment="Center" Background="#FFEEF6FF">
+                <ComboBoxItem Content="Customer NIC" IsSelected="True" Tag="C_NIC" Background="#FFEEF6FF" BorderBrush="#FF7AB3EF"/>
+                <ComboBoxItem Content="Rider NIC" Tag="R_NIC" Background="#FFEEF6FF" BorderBrush="#FF7AB3EF"/>
+                <ComboBoxItem Content="Vehicle Chassis No." Tag="V_CN" Background="#FFEEF6FF" BorderBrush="#FF7AB3EF"/>
 
             </ComboBox>
         </Border>
@@ -97,7 +97,7 @@
             FontFamily="MonteSerrat"
             FontWeight="SemiBold"
             Cursor="Hand"
-            Margin="0,64,10,0"
+            Margin="0,48,10,0"
             Click="btnSubmitVH_Click" Height="41" VerticalAlignment="Top" HorizontalAlignment="Right" Width="123">
             <Button.Style>
                 <Style TargetType="{x:Type Button}">
